--- a/package.json
+++ b/package.json
@@ -1,49 +1,104 @@
 {
+  "name": "spm",
+  "description": "The only package manager you will ever need",
+  "homepage": "https://github.com/omarsotillo/spm",
   "version": "0.1.0",
-  "license": "MIT",
   "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
-  "bin": "./dist/index.js",
+  "module": "dist/spm.esm.js",
+  "bin": {
+    "spm": "./dist/index.js"
+  },
+  "author": {
+    "name": "Omar Sotillo Franco"
+  },
+  "contributors": [
+    {
+      "name": "Omar Sotillo",
+      "email": "omarsotillofranco@gmail.com"
+    }
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/omarsotillo/spm.git"
+  },
+  "bugs": {
+    "url": "https://github.com/omarsotillo/spm/issues"
+  },
+  "keywords": [
+    "bundler",
+    "cli",
+    "npm",
+    "npm",
+    "package-managers"
+  ],
+  "dependencies": {
+    "find-up": "^5.0.0",
+    "inquirer": "^7.3.3",
+    "meow": "^8.1.0"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "latest",
+    "@commitlint/config-conventional": "latest",
+    "@size-limit/preset-small-lib": "^4.9.1",
+    "ci-publish": "latest",
+    "conventional-github-releaser": "latest",
+    "finepack": "latest",
+    "git-authors-cli": "latest",
+    "husky": "latest",
+    "lint-staged": "latest",
+    "npm-check-updates": "latest",
+    "size-limit": "^4.9.1",
+    "standard-version": "latest",
+    "tsdx": "^0.14.1",
+    "tslib": "^2.0.3",
+    "typescript": "^4.1.3"
+  },
+  "engines": {
+    "node": ">=10"
+  },
   "files": [
     "dist",
     "src"
   ],
-  "engines": {
-    "node": ">=10"
-  },
   "scripts": {
-    "start": "tsdx watch",
     "build": "tsdx build",
-    "test": "tsdx test",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build",
-    "size": "size-limit",
-    "analyze": "size-limit --why",
     "contributors": "(git-authors-cli && finepack && git add package.json && git commit -m 'build: contributors' --no-verify) || true",
+    "lint": "tsdx lint",
     "postrelease": "npm run release:tags && npm run release:github && ci-publish",
+    "prepare": "tsdx build",
     "prerelease": "npm run update:check && npm run contributors",
+    "release": "standard-version -a",
     "release:github": "conventional-github-releaser -p angular",
     "release:tags": "git push --follow-tags origin HEAD:master",
-    "release": "standard-version -a",
-    "update:check": "ncu -- --error-level 2",
-    "update": "ncu -u"
+    "start": "tsdx watch",
+    "test": "tsdx test",
+    "update": "ncu -u",
+    "update:check": "ncu -- --error-level 2"
   },
-  "peerDependencies": {},
+  "license": "MIT",
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "lint-staged"
     }
   },
+  "lint-staged": {
+    "package.json": [
+      "finepack"
+    ]
+  },
+  "peerDependencies": {},
   "prettier": {
     "printWidth": 80,
     "semi": true,
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "spm",
-  "author": "Omar Sotillo Franco",
-  "module": "dist/spm.esm.js",
   "size-limit": [
     {
       "path": "dist/spm.cjs.production.min.js",
@@ -54,36 +109,5 @@
       "limit": "10 KB"
     }
   ],
-  "devDependencies": {
-    "@size-limit/preset-small-lib": "^4.9.1",
-    "husky": "latest",
-    "size-limit": "^4.9.1",
-    "tsdx": "^0.14.1",
-    "tslib": "^2.0.3",
-    "typescript": "^4.1.3",
-    "@commitlint/cli": "latest",
-    "@commitlint/config-conventional": "latest",
-    "ci-publish": "latest",
-    "conventional-github-releaser": "latest",
-    "finepack": "latest",
-    "git-authors-cli": "latest",
-    "lint-staged": "latest",
-    "npm-check-updates": "latest",
-    "standard-version": "latest"
-  },
-  "dependencies": {
-    "find-up": "^5.0.0",
-    "meow": "^8.0.0",
-    "react": "^17.0.1"
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  },
-  "lint-staged": {
-    "package.json": [
-      "finepack"
-    ]
-  }
+  "typings": "dist/index.d.ts"
 }
