--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "spm",
+  "name": "@omarsotillo/spm",
   "description": "The only package manager you will ever need",
   "homepage": "https://github.com/omarsotillo/spm",
-  "version": "0.1.0",
+  "version": "0.1.10",
   "main": "dist/index.js",
   "module": "dist/spm.esm.js",
   "bin": {
-    "spm": "./dist/index.js"
+    "spm": "bin/spm.js"
   },
   "author": {
     "name": "Omar Sotillo Franco"
@@ -34,12 +34,15 @@
   "dependencies": {
     "find-up": "^5.0.0",
     "inquirer": "^7.3.3",
-    "meow": "^8.1.0"
+    "meow": "^8.1.0",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@commitlint/cli": "latest",
     "@commitlint/config-conventional": "latest",
     "@size-limit/preset-small-lib": "^4.9.1",
+    "@types/inquirer": "^7.3.1",
+    "@types/node-fetch": "^2.5.7",
     "ci-publish": "latest",
     "conventional-github-releaser": "latest",
     "finepack": "latest",
@@ -51,14 +54,15 @@
     "standard-version": "latest",
     "tsdx": "^0.14.1",
     "tslib": "^2.0.3",
+    "tsup": "^3.11.0",
     "typescript": "^4.1.3"
   },
   "engines": {
     "node": ">=10"
   },
   "files": [
-    "dist",
-    "src"
+    "bin",
+    "dist"
   ],
   "scripts": {
     "build": "tsdx build",
@@ -87,6 +91,11 @@
       "pre-commit": "lint-staged"
     }
   },
+  "licenses": [
+    {
+      "license": "MIT"
+    }
+  ],
   "lint-staged": {
     "package.json": [
       "finepack"
@@ -99,15 +108,5 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "size-limit": [
-    {
-      "path": "dist/spm.cjs.production.min.js",
-      "limit": "10 KB"
-    },
-    {
-      "path": "dist/spm.esm.js",
-      "limit": "10 KB"
-    }
-  ],
   "typings": "dist/index.d.ts"
 }
