refactor: deps build

--- a/package.json
+++ b/package.json
@@ -66,11 +66,11 @@
     "dist"
   ],
   "scripts": {
-    "build": "rimraf dist && tsup src/index.ts --format esm,cjs --dts",
+    "build": "",
     "contributors": "(git-authors-cli && finepack && git add package.json && git commit -m 'build: contributors' --no-verify) || true",
     "lint": "tsdx lint",
     "postrelease": "npm run release:tags && npm run release:github && ci-publish",
-    "prepare": "build ",
+    "prepare": "rimraf dist && tsup src/index.ts --format esm,cjs --dts",
     "prerelease": "npm run update:check && npm run contributors",
     "release": "standard-version -a",
     "release:github": "conventional-github-releaser -p angular",
