--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     {
       "name": "Omar Sotillo",
       "email": "omarsotillofranco@gmail.com"
+    },
+    {
+      "name": "Andrey Sitnik",
+      "email": "andrey@sitnik.ru"
     }
   ],
   "repository": {
@@ -33,30 +37,30 @@
   ],
   "dependencies": {
     "find-up": "^5.0.0",
-    "inquirer": "^7.3.3",
+    "inquirer": "^8.0.0",
     "meow": "^9.0.0",
     "node-fetch": "^2.6.1",
-    "simple-git-hooks": "2.0.2"
+    "simple-git-hooks": "2.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "latest",
     "@commitlint/config-conventional": "latest",
-    "@size-limit/preset-small-lib": "^4.9.1",
+    "@size-limit/preset-small-lib": "^4.10.1",
     "@types/inquirer": "^7.3.1",
-    "@types/node-fetch": "^2.5.7",
+    "@types/node-fetch": "^2.5.8",
     "ci-publish": "latest",
     "conventional-github-releaser": "latest",
     "finepack": "^2.10.11",
     "git-authors-cli": "^1.0.33",
     "lint-staged": "^10.5.4",
-    "npm-check-updates": "^11.1.4",
+    "npm-check-updates": "^11.3.0",
     "rimraf": "^3.0.2",
-    "size-limit": "^4.9.1",
+    "size-limit": "^4.10.1",
     "standard-version": "^9.1.1",
     "tsdx": "^0.14.1",
-    "tslib": "^2.0.3",
-    "tsup": "^3.11.0",
-    "typescript": "^4.1.3"
+    "tslib": "^2.1.0",
+    "tsup": "^4.8.19",
+    "typescript": "^4.2.3"
   },
   "engines": {
     "node": ">=10"
